= 1.1.10 =
* Fix: `sort_by` parameter doesn't work when using Posts Table Pro
* Dev: Tested up to WordPress 6.6

= 1.1.9 =
* Fix: Custom field values are gone when the post is quick edited
* Dev: Upgraded to barn2-lib 2
* Dev: Added ept prefix to sort_by shortcode attribute in barn2 table plugins
* Dev: Redirect to setup wizard after activation in the new WordPress plugin Installation

= 1.1.8 =
 * Fix: Fatal error after trying to delete the plugin
 * Fix: Undefined variables when using the free table plugins

= 1.1.7 = 
 * Fix: Fatal error when deleting the plugin
 * Dev: Updated internal libraries and classes
 * Dev: Modified the taxonomy column in different post types
 * Dev: Tested up to WordPress 6.4

= 1.1.6 =
 * Fix: Custom field's value con not be deleted

= 1.1.5 = 
 * Fix: Fatal error when activating the plugin 

= 1.1.4 = 
 * Fix: Change the slug rewrite rule for archives  
 * Dev: Fix PHP notice for register_uninstall_hook
 * Dev: Update webpack configuration to 2.0.0 
 * Dev: Tested up to WordPress 6.2 

= 1.1.3 =
 * Fix: Page post type was not visible in Manage Post Types page section 

= 1.1.2 =
 * Fix: Run setup wizard only after the first installation 
 * Fix: Show a link to edit and add custom post types 
 * Dev: Updated compatibility up to Wordpress 6.1.1

= 1.1.1 =
 * Fix: Improved integration with Document Library Pro
 * Fix: Exception being thrown for wrong parameter type

= 1.1.0 =
 * New: Added support for WooCommerce Product Table and Document Library Pro
 * Fix: Top-level menus not being ordered correctly
 * Dev: Updated compatibility up to Wordpress 6.0.1

= 1.0.0 =
Initial release.