@@ -1,22 +1,22 @@
 <?php return array(
     'root' => array(
+        'name' => 'barn2/easy-post-types-fields',
         'pretty_version' => 'dev-master',
         'version' => 'dev-master',
+        'reference' => '6e8ebb87d47086d20e3379ebc4c9104f801a9507',
         'type' => 'wordpress-plugin',
         'install_path' => __DIR__ . '/../../',
         'aliases' => array(),
-        'reference' => '4bad227b650c4eba4673a87b3e60a1b270888393',
-        'name' => 'barn2/easy-post-types-fields',
         'dev' => false,
     ),
     'versions' => array(
         'barn2/easy-post-types-fields' => array(
             'pretty_version' => 'dev-master',
             'version' => 'dev-master',
+            'reference' => '6e8ebb87d47086d20e3379ebc4c9104f801a9507',
             'type' => 'wordpress-plugin',
             'install_path' => __DIR__ . '/../../',
             'aliases' => array(),
-            'reference' => '4bad227b650c4eba4673a87b3e60a1b270888393',
             'dev_requirement' => false,
         ),
     ),
